Prepare for Micronaut 4